src/app/components/staff-side-bar/staff-side-bar.component.scss
.side-bar {
  padding-top: 100px;
  height: 100vh;
  width: 245px;
  background-color: #2e7d32;
  overflow-y: auto;
}

.title {
  margin: 6px 15px;
  font-size: 20px;
  font-weight: bold;
  color: #84aa86;
}

.action {
  padding: 10px 15px;
  font-size: 15px;
  color: white;
  text-decoration: none;
  display: block;
  border-bottom: 1px solid #5b965e;
}

.divider {
  margin-top: 5px;
  margin-bottom: 5px;
  height: 1px;
  width: 100%;
  border-top: 3px solid white;
}

.side-bar-icon {
  width: 20px;
  height: 20px;
}

@media only screen and (max-width: 767px) {
  .side-bar {
    width: 50px;
  }
  .text {
    display: none;
  }
}

